[package]
name = "store-interval-tree"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
description = "A balanced unbounded interval-tree in Rust with associated values in the nodes"
documentation = "https://docs.rs/store-interval-tree"
repository = "https://github.com/andreafioraldi/store-interval-tree"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tree", "data-structure", "algorithm"]

[dependencies]
